# zero-render

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/common/: const.h  tbuffer.h  types.h
src/gl/: Camera.cpp  Camera.h  Camera2.cpp  Camera2.h  GlPainter.cpp  GlPainter.h  LightSource.cpp  LightSource.h  Scene.cpp  Scene.h
src/gui/: MainWindow.cpp  MainWindow.h
src/math/: Algorythm.cpp  Algorythm.h  Matrix4D.cpp  Matrix4D.h  Vec3i.cpp  Vec3i.h
